--- a/Public/index.html
+++ b/Public/index.html
@@ -9,8 +9,8 @@
     <h1>This is the dash landing page</h1>
 
     <h3>What would you like to do?</h3>
-    <a href="beg.html">BEG</a>
-    <a href="dash.html">DASH</a>
+    <!-- <a href="beg.html">BEG</a> -->
+    <a href="dash.html">MAKE A DASH</a>
     <a href="display.html">DISPLAY DASHES</a>
 </body>
 </html>
